--- a/nev-dec5/nev-dec5/nev-dec5.vcxproj
+++ b/nev-dec5/nev-dec5/nev-dec5.vcxproj
@@ -18,6 +18,14 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\p5.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\d_except.h" />
+    <ClInclude Include="..\..\d_matrix.h" />
+    <ClInclude Include="..\..\graph.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7D29D007-2CF1-47AB-BF8F-660A1C445926}</ProjectGuid>
     <RootNamespace>nevdec5</RootNamespace>
@@ -109,14 +117,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\Downloads\d_except.h" />
-    <ClInclude Include="..\..\..\..\..\..\Downloads\d_matrix.h" />
-    <ClInclude Include="..\..\..\..\..\..\Downloads\graph.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\Downloads\p5.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
