--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ nev-dec5/nev-dec5/Debug/vc140.idb
 *.pdb
 *.idb
 nev-dec5/nev-dec5/Debug/p5.obj
+*.log
+nev-dec5/nev-dec5/Debug/nev-dec5.tlog/CL.command.1.tlog
+*.lastbuildstate
+nev-dec5/nev-dec5/Debug/vc140.idb
