--- a/nev-dec5/nev-dec5/nev-dec5.vcxproj
+++ b/nev-dec5/nev-dec5/nev-dec5.vcxproj
@@ -26,6 +26,14 @@
     <ClInclude Include="..\..\d_matrix.h" />
     <ClInclude Include="..\..\graph.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="maze1.txt" />
+    <Text Include="maze2.txt" />
+    <Text Include="maze3.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7D29D007-2CF1-47AB-BF8F-660A1C445926}</ProjectGuid>
     <RootNamespace>nevdec5</RootNamespace>
