--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ nev-dec5/nev-dec5/Debug/p5.obj
 nev-dec5/nev-dec5/Debug/nev-dec5.tlog/CL.command.1.tlog
 *.lastbuildstate
 nev-dec5/nev-dec5/Debug/vc140.idb
+nev-dec5/Debug/nev-dec5.ilk
+*.tlog
+nev-dec5/nev-dec5/Debug/vc140.idb
+*.pdb
